fixed spacing on get directions buttons

--- a/public/styles/results.css
+++ b/public/styles/results.css
@@ -22,6 +22,8 @@ h1 {
 .container {
     background: rgba(148, 149, 150, 0.685);
     border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 50px;
 }
 
 .restaurantDiv {
@@ -32,4 +34,14 @@ p {
     margin: 0px;
     padding: 0px;
     font-size: 24px;
+}
+
+.btn {
+    max-width: 150px;
+    margin-left: 10px;
+}
+
+#btn-fav, #btn-directions {
+    margin-right: auto;
+    margin-left: auto;
 }
